Add link to editor.html

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 </div>
 <p class="text-[#9db0b9] text-sm mt-2 mb-6">AI-generated logo intro with dynamic animation and sound effects.</p>
 <div class="flex items-center gap-4">
-<button class="flex items-center gap-2 rounded-md h-10 px-4 bg-[var(--primary-color)] text-white text-sm font-semibold hover:bg-opacity-90 transition-colors">
+<a href="editor.html" class="flex items-center gap-2 rounded-md h-10 px-4 bg-[var(--primary-color)] text-white text-sm font-semibold hover:bg-opacity-90 transition-colors">
 <span class="material-symbols-outlined text-xl"> edit </span>
 <span>Edit</span>
-</button>
+</a>
 <button class="flex items-center gap-2 rounded-md h-10 px-4 bg-[#283339] text-white text-sm font-medium hover:bg-[#344147] transition-colors">
 <span class="material-symbols-outlined text-xl"> compare_arrows </span>
 <span>Compare</span>
